tests/specs/ecosystem/kz/common_exceptions/0_0_1.test
kz/common-exceptions/0.0.1
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@kz/common-types@0.0.2": "jsr:@kz/common-types@0.0.2"
    },
    "jsr": {
      "@kz/common-types@0.0.2": {
        "integrity": "48beb5d32c359804b82081cd6ed999014137f69d31d87b264e3d4a9cb9433a34"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
   */ public get name(): string {
                 ~~~~
    at file://<tmpdir>/src/exceptions/exception.ts:87:18

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
   */ public get cause(): Error | undefined {
                 ~~~~~
    at file://<tmpdir>/src/exceptions/exception.ts:156:18

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
   */ public valueOf(): number {
             ~~~~~~~
    at file://<tmpdir>/src/exceptions/exception.ts:189:14

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Error'.
   */ public toString(): string {
             ~~~~~~~~
    at file://<tmpdir>/src/exceptions/exception.ts:207:14

Found 4 errors.

